# name: TestMTGIntegration.test_valid_url[aetherhub]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[aetherhub_with_www]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[archidekt]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[archidekt_with_hash]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[archidekt_with_slash]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[archidekt_with_www]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[cubecobra]
  Counter({
    'Brainstorm': 4,
    'Delver of Secrets': 1,
    'Past in Flames': 3,
  })
# ---
# name: TestMTGIntegration.test_valid_url[cubecobra_with_www]
  Counter({
    'Brainstorm': 4,
    'Delver of Secrets': 1,
    'Past in Flames': 3,
  })
# ---
# name: TestMTGIntegration.test_valid_url[deckstats]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[deckstats_with_www]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[magicville]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[magicville_with_www]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[manastack]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[mtggoldfish]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[mtggoldfish_without_www]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[scryfall]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[scryfall_with_www]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[tappedout]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[tappedout_with_www]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[tcgplayer]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
